src/test/data/tests/pragma/invalid/unterminated_string.c
#pragma data 0x00 "Hello, world!\n

int main(void) {
    return 0;
}
